// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card <Card /> renders well 1`] = `
<Card
  className="card "
>
  <div
    className="card-header"
  >
    <h3
      className="card-header-title"
    >
      <a
        className="card-header-title-link"
        href="https://www.foo.com/article"
        rel="noopener noreferrer"
        target="_blank"
      >
        First article
      </a>
    </h3>
    <ForwardRef(HeartFilled)
      className="card-header-heartFilled"
      onClick={[Function]}
    />
  </div>
  <p
    className="card-content"
  >
    No description provided
  </p>
  <div
    className="card-footer"
  >
    <span>
      2020-12-31
    </span>
    <span>
      Foo
    </span>
  </div>
</Card>
`;

exports[`Card <Card /> renders well with a description containing less than 100 characters 1`] = `
<Card
  className="card "
>
  <div
    className="card-header"
  >
    <h3
      className="card-header-title"
    >
      <a
        className="card-header-title-link"
        href="https://www.foo.com/article"
        rel="noopener noreferrer"
        target="_blank"
      >
        First article
      </a>
    </h3>
    <ForwardRef(HeartFilled)
      className="card-header-heartFilled"
      onClick={[Function]}
    />
  </div>
  <p
    className="card-content"
  >
    Lorem ipsum dolor sit amet
  </p>
  <div
    className="card-footer"
  >
    <span>
      2020-12-31
    </span>
    <span>
      Foo
    </span>
  </div>
</Card>
`;

exports[`Card <Card /> renders well with a description containing more than 100 characters 1`] = `
<Card
  className="card "
>
  <div
    className="card-header"
  >
    <h3
      className="card-header-title"
    >
      <a
        className="card-header-title-link"
        href="https://www.foo.com/article"
        rel="noopener noreferrer"
        target="_blank"
      >
        First article
      </a>
    </h3>
    <ForwardRef(HeartFilled)
      className="card-header-heartFilled"
      onClick={[Function]}
    />
  </div>
  <p
    className="card-content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      Donec pharetra nibh non odio interdum...
  </p>
  <div
    className="card-footer"
  >
    <span>
      2020-12-31
    </span>
    <span>
      Foo
    </span>
  </div>
</Card>
`;

exports[`Card <Card /> renders well with pending favorite 1`] = `
<Card
  className="card card-pending"
>
  <Loader
    className="loader-wrapper-card"
  />
  <div
    className="card-header"
  >
    <h3
      className="card-header-title"
    >
      <a
        className="card-header-title-link"
        href="https://www.foo.com/article"
        rel="noopener noreferrer"
        target="_blank"
      >
        First article
      </a>
    </h3>
    <ForwardRef(HeartFilled)
      className="card-header-heartFilled"
      onClick={[Function]}
    />
  </div>
  <p
    className="card-content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      Donec pharetra nibh non odio interdum...
  </p>
  <div
    className="card-footer"
  >
    <span>
      2020-12-31
    </span>
    <span>
      Foo
    </span>
  </div>
</Card>
`;

exports[`Card <ConnectedCard /> renders well 1`] = `
<ContextProvider
  value={null}
>
  <Card
    favorites={Array []}
    onCreateFavorite={[Function]}
    onRemoveFavorite={[Function]}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  />
</ContextProvider>
`;
